--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -48,7 +48,9 @@ file.reference.hamcrest-library-1.3.jar=jars/restassured/rest-assured-2.6.0-deps
 file.reference.httpclient-4.5.1.jar=jars/restassured/rest-assured-2.6.0-deps/httpclient-4.5.1.jar
 file.reference.httpcore-4.4.3.jar=jars/restassured/rest-assured-2.6.0-deps/httpcore-4.4.3.jar
 file.reference.httpmime-4.5.1.jar=jars/restassured/rest-assured-2.6.0-deps/httpmime-4.5.1.jar
+file.reference.jersey-core-1.19.jar=jars/jersey-core-1.19.jar
 file.reference.jetty-all-9.2.13.v20150730.jar=jars/jetty/jetty-all-9.2.13.v20150730.jar
+file.reference.json-20140107.jar=jars/json-20140107.jar
 file.reference.json-smart-1.2.jar=jars/json-smart-1.2.jar
 file.reference.nimbus-jose-jwt-4.9.jar=jars/nimbus-jose-jwt-4.9.jar
 file.reference.rest-assured-2.6.0.jar=jars/restassured/rest-assured-2.6.0.jar
@@ -58,7 +60,7 @@ j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.5.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-spdy.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
@@ -68,7 +70,9 @@ javac.classpath=\
     ${file.reference.gson-2.3.1.jar}:\
     ${file.reference.json-smart-1.2.jar}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.nimbus-jose-jwt-4.9.jar}
+    ${file.reference.nimbus-jose-jwt-4.9.jar}:\
+    ${file.reference.json-20140107.jar}:\
+    ${file.reference.jersey-core-1.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
