--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -114,7 +114,7 @@ javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
-platform.active=JDK_1.7
+platform.active=jdk7
 resource.dir=setup
 rest.config.type=ide
 run.test.classpath=\
